fix1 change layout

--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
     <div id=outer>
         <input type="text" id='display' disabled>
         <br>
-        <div class="inner"><button>Rad</button></div>
-        <div class="inner"><button>Deg</button></div>
-        <div class="inner"><button>x!</button></div>
-        <div class="inner"><button>(</button></div>
-        <div class="inner"><button>)</button></div>
-        <div class="inner"><button>%</button></div>
-        <div class="inner"><button value="C">CE</button></div>
+        <div class="inner"><button id="Rad" disabled>Rad</button></div>
+        <div class="inner"><button id="Deg"  disabled >Deg</button></div>
+        <div class="inner"><button id="x!"  disabled>x!</button></div>
+        <div class="inner"><button id="("  disabled>(</button></div>
+        <div class="inner"><button id=")"  disabled>)</button></div>
+        <div class="inner"><button id="%"  disabled>%</button></div>
+        <div class="inner"><button id="CE" value="C">CE</button></div>
         <br>
-        <div class="inner"><button>lnv</button></div>
-        <div class="inner"><button>sin</button></div>
-        <div class="inner"><button>ln</button></div>
-        <div class="inner"><button value="7" id="button">7</button></div>
-        <div class="inner"><button value="8" id="button">8</button></div>
-        <div class="inner"><button value="9" id="button">9</button></div>
-        <div class="inner"><button value="/">÷</button></div>
+        <div class="inner"><button  disabled>lnv</button></div>
+        <div class="inner"><button  disabled>sin</button></div>
+        <div class="inner"><button  disabled>ln</button></div>
+        <div class="inner"><button value="7" id="7">7</button></div>
+        <div class="inner"><button value="8" id="8">8</button></div>
+        <div class="inner"><button value="9" id="9">9</button></div>
+        <div class="inner"><button value="/" id="/">÷</button></div>
         <br>
-        <div class="inner"><button>π</button></div>
-        <div class="inner"><button>cos</button></div>
-        <div class="inner"><button>log</button></div>
-        <div class="inner"><button value="4" id="button">4</button></div>
-        <div class="inner"><button value="5" id="button">5</button></div>
-        <div class="inner"><button value="6" id="button">6</button></div>
-        <div class="inner"><button value="*">×</button></div>
+        <div class="inner"><button  disabled>π</button></div>
+        <div class="inner"><button  disabled>cos</button></div>
+        <div class="inner"><button disabled>  log</button></div>
+        <div class="inner"><button value="4" id="4">4</button></div>
+        <div class="inner"><button value="5" id="5">5</button></div>
+        <div class="inner"><button value="6" id="6">6</button></div>
+        <div class="inner"><button value="*" id="*">×</button></div>
         <br>
-        <div class="inner"><button>e</button></div>
-        <div class="inner"><button>tan</button></div>
-        <div class="inner"><button>√</button></div>
-        <div class="inner"><button value="1" id="button">1</button></div>
-        <div class="inner"><button value="2" id="button">2</button></div>
-        <div class="inner"><button value="3" id="button">3</button></div>
-        <div class="inner"><button value="-">-</button></div>
+        <div class="inner"><button  disabled>e</button></div>
+        <div class="inner"><button  disabled>tan</button></div>
+        <div class="inner"><button  disabled>√</button></div>
+        <div class="inner"><button value="1" id="1">1</button></div>
+        <div class="inner"><button value="2" id="2">2</button></div>
+        <div class="inner"><button value="3" id="3">3</button></div>
+        <div class="inner"><button value="-" id="-">-</button></div>
         <br>
-        <div class="inner"><button>Ans</button></div>
-        <div class="inner"><button>EXP</button></div>
-        <div class="inner"><button>x^y</button></div>
-        <div class="inner"><button value="0"  id="button">0</button></div>
-        <div class="inner"><button value="." id="button">.</button></div>
+        <div class="inner"><button  disabled>Ans</button></div>
+        <div class="inner"><button  disabled>EXP</button></div>
+        <div class="inner"><button  disabled>x^y</button></div>
+        <div class="inner"><button value="0"  id="0">0</button></div>
+        <div class="inner"><button value="." id=".">.</button></div>
         <div class="inner"><button value="=" style="background-color:royalblue;color:white">=</button></div>
-        <div class="inner"><button value="+">+</button></div>
+        <div class="inner"><button value="+" id="+">+</button></div>
     </div>
 
     <script type="text/javascript" src="./calculator.js"></script>
